--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -2,42 +2,19 @@
 <html lang="en">
 
 <head>
-    <meta charset="utf-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+    <meta charset='utf-8'>
+    <meta name='viewport' content='width=device-width,initial-scale=1'>
+
     <title>Scheduler</title>
 
-    <link rel="shortcut icon" href="/images/favicon.ico" type="image/x-icon" />
-    <link rel="stylesheet" href="/css/main.css" />
-    <link rel="stylesheet" href="https://cdn.materialdesignicons.com/5.3.45/css/materialdesignicons.min.css" />
-    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Raleway:100,300,400,500,700,900">
-    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Nunito:100,300,400,500,700,900">
+    <link rel='icon' type='image/png' href='/favicon.png'>
+    <link rel='stylesheet' href='/global.css'>
+    <link rel='stylesheet' href='/build/bundle.css'>
 
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.29.1/moment.min.js" defer></script>
-    <script type="module" src="/javascript/main.js" defer></script>
+    <script defer src='/build/bundle.js'></script>
 </head>
 
 <body>
-    <div id="app">
-        <div id="sidebar" class="m-2">
-            <h1 class="text-3xl mb-8 font-light"><a href="/">Scheduler</a></h1>
-            <ul class="ml-4">
-                <li class="text-xl mb-2 font-light">
-                    <a href="/employees.html">Employees</a>
-                </li>
-                <li class="text-xl mb-2 font-light">
-                    <a href="/positions.html">Positions</a>
-                </li>
-                <li class="text-xl mb-2 font-light">
-                    <a href="/schedules.html">Schedules</a>
-                </li>
-            </ul>
-        </div>
-
-        <div id="content" class="mt-36 ml-8 flex-grow">
-            <h1>Placeholder</h1>
-            <div id="footer" class="mt-6 text-gray-400">placeholder</div>
-        </div>
-    </div>
 </body>
 
 </html>
